test/programs/invalid_programs/syntax/no_string_end.jm
#!SyntaxError

def helloWorld()
  puts("Hello World!)
end

helloWorld()
